--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
 spring.application.name=demo2
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Lml123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 数据库配置
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# 启用H2控制台
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.trace=false
+
+# JPA配置
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# 服务器配置
+server.port=8080
+server.address=0.0.0.0
 
 # OpenAI配置
 spring.ai.openai.api-key=your-api-key-here
