--- a/ai_1/app/src/main/AndroidManifest.xml
+++ b/ai_1/app/src/main/AndroidManifest.xml
@@ -16,15 +16,23 @@
         android:theme="@style/Theme.AI_1"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
